fixed spacing

--- a/code-1/style.css
+++ b/code-1/style.css
@@ -268,6 +268,9 @@
 
     .money-box{
         margin: .3rem;
+        padding: 0 .5rem;
+        justify-content: space-between;
+        padding-right: 3rem;
     }
 
     .money-box p:first-child{
